Can't Reproduce #371 - Example 2

--- a/sandbox/RazorLight.Sandbox/RazorLight.Sandbox.csproj
+++ b/sandbox/RazorLight.Sandbox/RazorLight.Sandbox.csproj
@@ -22,6 +22,16 @@
   </ItemGroup>
 
   <ItemGroup>
+    <None Remove="loremipsum.zdict" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Include="loremipsum.zdict">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="RazorLight" Version="2.0.0-rc.3" />
     <PackageReference Include="Zstandard.Net" Version="1.1.7" />
   </ItemGroup>
