--- a/sandbox/RazorLight.Sandbox/RazorLight.Sandbox.csproj
+++ b/sandbox/RazorLight.Sandbox/RazorLight.Sandbox.csproj
@@ -32,8 +32,11 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="RazorLight" Version="2.0.0-rc.3" />
-    <PackageReference Include="Zstandard.Net" Version="1.1.7" />
+    <PackageReference Include="ZstdNet" Version="1.4.5" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\src\RazorLight\RazorLight.csproj" />
   </ItemGroup>
 
 </Project>
