attempt to try publishing to nuget

--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -40,3 +40,14 @@ jobs:
 
     - name: Test
       run: dotnet test --verbosity normal
+      
+  package:
+    runs-on: windows-latest
+    
+    steps:
+    - name: Publish RazorLight
+      uses: brandedoutcast/publish-nuget@v2.5.5
+      with:
+          PROJECT_FILE_PATH: src/RazorLight/RazorLight.csproj
+          NUGET_KEY: ${{secrets.NUGET_API_KEY}}
+  
