--- a/.github/workflows/dotnet-pack-and-push.yml
+++ b/.github/workflows/dotnet-pack-and-push.yml
@@ -43,6 +43,11 @@ jobs:
     runs-on: windows-latest
     needs: build
     steps:
+    - name: Check src directory existence
+      id: check_src_directory
+      uses: andstor/file-existence-action@v1
+      with:
+        files: "src"
     - name: Check file existence w/ backslash path separator
       id: check_files_backslash
       uses: andstor/file-existence-action@v1
