forgot to add the checkout requirement

--- a/.github/workflows/dotnet-pack-and-push.yml
+++ b/.github/workflows/dotnet-pack-and-push.yml
@@ -48,6 +48,8 @@ jobs:
     needs: build
     
     steps:
+    - uses: actions/checkout@v2
+    
     - name: Check working-directory existence
       id: check_workdir
       uses: andstor/file-existence-action@v1
