Change how version is specified

--- a/.github/workflows/dotnet-pack-and-push.yml
+++ b/.github/workflows/dotnet-pack-and-push.yml
@@ -49,28 +49,12 @@ jobs:
     
     steps:
     - uses: actions/checkout@v2
-      
-    - name: Check src directory existence
-      id: check_src_directory
-      uses: andstor/file-existence-action@v1
-      with:
-        files: "src"
-    - name: Check file existence w/ backslash path separator
-      id: check_files_backslash
-      uses: andstor/file-existence-action@v1
-      with:
-        files: "src\\RazorLight\\RazorLight.csproj"
-    - name: Check file existence w/ forward slash path separator
-      id: check_files_forwardslash
-      uses: andstor/file-existence-action@v1
-      with:
-        files: "src/RazorLight/RazorLight.csproj"
     
     - name: Publish RazorLight
       uses: brandedoutcast/publish-nuget@v2.5.5
       with:
         PROJECT_FILE_PATH: src\RazorLight\RazorLight.csproj
-        VERSION_STATIC: ${{ github.event.inputs.version }}
+        VERSION_FILE_PATH: src\Directory.Build.props
         INCLUDE_SYMBOLS: true
         NUGET_KEY: ${{secrets.NUGET_API_KEY}}
   
