--- a/.github/workflows/dotnet-pack-and-push.yml
+++ b/.github/workflows/dotnet-pack-and-push.yml
@@ -62,7 +62,8 @@ jobs:
       # uses: brandedoutcast/publish-nuget@v2.5.5
       uses: alirezanet/publish-nuget@v3.0.0
       with:
-        PROJECT_FILE_PATH: src\RazorLight\RazorLight.csproj
+        # PROJECT_FILE_PATH: src\RazorLight\RazorLight.csproj
+        INPUT_PROJECT_FILE_PATH: src\RazorLight\RazorLight.csproj
         VERSION_FILE_PATH: src\Directory.Build.props
         INCLUDE_SYMBOLS: true
         NUGET_KEY: ${{secrets.NUGET_API_KEY}}
