--- a/.github/workflows/dotnet-pack-and-push.yml
+++ b/.github/workflows/dotnet-pack-and-push.yml
@@ -61,9 +61,10 @@ jobs:
       # https://github.com/brandedoutcast/publish-nuget/issues/58#issuecomment-986196000
       # uses: brandedoutcast/publish-nuget@v2.5.5
       uses: alirezanet/publish-nuget@v3.0.0
+      env:
+        INPUT_PROJECT_FILE_PATH: src\RazorLight\RazorLight.csproj
       with:
         # PROJECT_FILE_PATH: src\RazorLight\RazorLight.csproj
-        INPUT_PROJECT_FILE_PATH: src\RazorLight\RazorLight.csproj
         VERSION_FILE_PATH: src\Directory.Build.props
         INCLUDE_SYMBOLS: true
         NUGET_KEY: ${{secrets.NUGET_API_KEY}}
