--- a/.github/workflows/dotnet-pack-and-push.yml
+++ b/.github/workflows/dotnet-pack-and-push.yml
@@ -56,7 +56,14 @@ jobs:
     steps:
     # Commented out b/c implicit from 'needs: build' requirement. Otherwise, this will cause a clean checkout and thus clean build obj/bin directory contents
     - uses: actions/checkout@v2
-    
+ 
+    # To avoid NETSDK1004 error, we need to install the latest major version of the .NET SDK.
+    # See: https://docs.microsoft.com/en-us/dotnet/core/tools/sdk-errors/netsdk1004
+    - name: Setup .NET 6
+      uses: actions/setup-dotnet@v1
+      with:
+        dotnet-version: '6.0.x'
+        
     - name: Publish RazorLight
       # https://github.com/brandedoutcast/publish-nuget/issues/58#issuecomment-986196000
       # uses: brandedoutcast/publish-nuget@v2.5.5
