--- a/.github/workflows/dotnet-pack-and-push.yml
+++ b/.github/workflows/dotnet-pack-and-push.yml
@@ -45,7 +45,37 @@ jobs:
     - name: Test
       run: dotnet test --verbosity normal
       
-  package:
+  package_RazorLight:
+
+    runs-on: windows-latest
+    needs: build
+    if: needs.build.result == 'success'
+    env:
+      INPUT_PROJECT_FILE_PATH: src\RazorLight\RazorLight.csproj
+    
+    steps:
+    # Commented out b/c implicit from 'needs: build' requirement. Otherwise, this will cause a clean checkout and thus clean build obj/bin directory contents
+    - uses: actions/checkout@v2
+ 
+    # To avoid NETSDK1004 error, we need to install the latest major version of the .NET SDK.
+    # See: https://docs.microsoft.com/en-us/dotnet/core/tools/sdk-errors/netsdk1004
+    - name: Setup .NET 6
+      uses: actions/setup-dotnet@v1
+      with:
+        dotnet-version: '6.0.x'
+        
+    - name: Publish RazorLight
+      # https://github.com/brandedoutcast/publish-nuget/issues/58#issuecomment-986196000
+      # uses: brandedoutcast/publish-nuget@v2.5.5
+      uses: alirezanet/publish-nuget@v3.0.0
+
+      with:
+        PROJECT_FILE_PATH: src/RazorLight/RazorLight.csproj
+        VERSION_FILE_PATH: src/Directory.Build.props
+        INCLUDE_SYMBOLS: true
+        NUGET_KEY: ${{secrets.NUGET_API_KEY}}
+  
+  package_RazorLight_Precompile:
 
     runs-on: windows-latest
     needs: build
@@ -74,15 +104,3 @@ jobs:
         VERSION_FILE_PATH: src/Directory.Build.props
         INCLUDE_SYMBOLS: true
         NUGET_KEY: ${{secrets.NUGET_API_KEY}}
-        
-    - name: Publish RazorLight
-      # https://github.com/brandedoutcast/publish-nuget/issues/58#issuecomment-986196000
-      # uses: brandedoutcast/publish-nuget@v2.5.5
-      uses: alirezanet/publish-nuget@v3.0.0
-
-      with:
-        PROJECT_FILE_PATH: src/RazorLight/RazorLight.csproj
-        VERSION_FILE_PATH: src/Directory.Build.props
-        INCLUDE_SYMBOLS: true
-        NUGET_KEY: ${{secrets.NUGET_API_KEY}}
-  
